[gd_scene load_steps=10 format=3 uid="uid://dtwm5gj2hvijf"]

[ext_resource type="Script" path="res://Scripts/Levels/Level1.gd" id="1_4elqj"]
[ext_resource type="PackedScene" uid="uid://c7wkfcwegnan7" path="res://Scenes/Enemies/Enemy.tscn" id="2_nyy0e"]
[ext_resource type="Texture2D" uid="uid://b4g18jrqxbjuu" path="res://Assets/Fantasy/Background/Grass field.png" id="2_pgfqp"]
[ext_resource type="FontFile" uid="uid://ycaiqwy2b78f" path="res://Assets/SpaceMono-Regular.ttf" id="3_7chxd"]
[ext_resource type="PackedScene" uid="uid://b08lpxupe4h7c" path="res://Scenes/Players/Player.tscn" id="4_n54yd"]

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("3_7chxd")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="3"]
fallbacks = Array[Font]([ExtResource("3_7chxd")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="FontFile" id="4"]
fallbacks = Array[Font]([ExtResource("3_7chxd")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(130, 121)

[node name="Level1" type="Node2D"]
script = ExtResource("1_4elqj")
EnemyScene = ExtResource("2_nyy0e")
PlayerScene = ExtResource("4_n54yd")

[node name="Background" type="Sprite2D" parent="."]
texture_repeat = 2
position = Vector2(270, 488)
scale = Vector2(0.796323, 0.796323)
texture = ExtResource("2_pgfqp")
region_enabled = true
region_rect = Rect2(0, 0, 783.623, 1269.55)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOverScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 1
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 0
mouse_filter = 1
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 0
theme = null
theme_type_variation = &""
theme_override_constants/separation = 50
alignment = 0
script = null

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "GAME OVER"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="AccuracyLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Accuracy:"

[node name="AccuracyValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameOverKilledLabel" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "Killed:"

[node name="GameOverKilledValue" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("2")
text = "0"

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("3")
text = "RESTART"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 448.0
offset_top = 920.0
offset_right = 533.0
offset_bottom = 945.0
mouse_filter = 2
alignment = 2

[node name="EnemiesKilledLabel" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "Killed:"

[node name="EnemiesKilledValue" type="Label" parent="CanvasLayer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "0"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 7.0
offset_top = 920.0
offset_right = 124.0
offset_bottom = 945.0
mouse_filter = 2

[node name="DifficultyLabel" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "Difficulty:"

[node name="DifficultyValue" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("4")
text = "0"

[node name="LoseArea" type="Area2D" parent="."]
position = Vector2(0, 5.55865)

[node name="CollisionShape2D" type="CollisionShape2D" parent="LoseArea"]
position = Vector2(281, 868.941)
shape = SubResource("1")

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnContainer"]
position = Vector2(40, -21)

[node name="Position2D2" type="Marker2D" parent="SpawnContainer"]
position = Vector2(140, -20)

[node name="Position2D3" type="Marker2D" parent="SpawnContainer"]
position = Vector2(233, -28)

[node name="Position2D4" type="Marker2D" parent="SpawnContainer"]
position = Vector2(354, -23)

[node name="Position2D5" type="Marker2D" parent="SpawnContainer"]
position = Vector2(492, -14)

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="ProjectileContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="Player" parent="." instance=ExtResource("4_n54yd")]
position = Vector2(282, 874)

[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="body_entered" from="LoseArea" to="." method="_on_LoseArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
